kustomization/components/networkpolicy-allow-to-lldap/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-lldap-networkpolicy
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app.kubernetes.io/name: lldap
      ports:
        - port: ldaps
          protocol: TCP
  podSelector:
    matchLabels:
      hogs.tswn.us/lldap-client: "true"
  policyTypes:
    - Egress
